# analyse-spoons

./: .gitignore  README.md  main.py  pyproject.toml
encrypted_data/: 2023-03-data.enc  2023-04-data.enc  2023-05-data.enc  2023-06-data.enc  2023-07-data.enc  2023-08-data.enc  2023-09-data.enc  2023-10-data.enc  2023-11-data.enc  2023-12-data.enc  README.md
encrypted_raw_data/: Apr-Dec-2023.enc  April2023.enc  March2023.txt  README.md
services/: encryption.py  graphical_analyses.py  process_and_store_input.py
tests/services/: test_process_and_store_input.py
