[tool.poetry]
name = "analyse-spoons"
version = "0.1.0"
description = ""
authors = ["elthorne <46898565+elthorne@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.1.1"
typing-extensions = "^4.10.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
